Kombinerer behandlingårsak med tilkjent ytelse for å avgjøre innvilgelsesbrevet.